# knet

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.en.md  README.md  README_EN.md  RELEASE-NOTES.md  build.py
src/knet/: CMakeLists.txt
src/knet/api/: CMakeLists.txt
src/knet/api/dtoe_api/: CMakeLists.txt  dtoe_api.spec
src/knet/api/dtoe_api/include/: knet_dtoe_api.h
src/knet/api/dtoe_api/src/: dtoe_api.c  knet_dtoe_config.c  knet_dtoe_config.h  knet_dtoe_config_setter.c  knet_dtoe_config_setter.h  knet_dtoe_events.h  knet_dtoe_fd.c  knet_dtoe_fd.h
src/knet/api/extern_api/: CMakeLists.txt  extern_api.spec
src/knet/api/extern_api/cothread/: CMakeLists.txt  cothread.spec
src/knet/api/extern_api/include/: knet_socket_api.h
src/knet/api/extern_api/zcopy/: CMakeLists.txt  zcopy.spec
src/knet/api/kbdtoe_api/: CMakeLists.txt  kbdtoe_api.spec
src/knet/api/kbdtoe_api/include/: kbdtoe.h
src/knet/api/kbdtoe_api/src/: kbdtoe.c  kbdtoe_base.h  kbdtoe_log.c  kbdtoe_log.h  kbdtoe_mempool_mr.c  kbdtoe_mempool_mr.h  libdtoe_poll.c  libdtoe_recv.c  libdtoe_send.c
src/knet/api/posix_api/: CMakeLists.txt  posix_api.spec
src/knet/api/posix_api/src/: knet_posix_api.c
src/knet/api/socket_bridge/: CMakeLists.txt  socket_bridge.spec
src/knet/api/socket_bridge/include/: knet_socket_bridge.h
src/knet/api/socket_bridge/src/: knet_socket_bridge.c
src/knet/common/statistics/: CMakeLists.txt  statistics.spec
src/knet/common/statistics/include/: knet_statistics.h
src/knet/core/: CMakeLists.txt
src/knet/core/base/: base.spec
src/knet/core/base/include/: knet_atomic.h  knet_lock.h  knet_types.h  knet_utils.h
src/knet/core/base/src/: knet_atomic.c  knet_base.c  knet_lock.c  knet_utils.c
src/knet/core/capability/: capability.spec
src/knet/core/capability/include/: knet_capability.h
src/knet/core/capability/src/: knet_capability.c
src/knet/core/config/: CMakeLists.txt  config.spec
src/knet/core/config/include/: knet_config.h
src/knet/core/config/src/: knet_config.c  knet_config_setter.c  knet_config_setter.h  knet_hw_scan.c  knet_hw_scan.h  knet_queue_id.c  knet_queue_id.h
src/knet/core/fmm/: CMakeLists.txt  fmm.spec
src/knet/core/fmm/include/: knet_fmm.h
src/knet/core/fmm/src/: knet_fmm.c
src/knet/core/hash/: CMakeLists.txt  hash.spec
src/knet/core/hash/include/: knet_hash_rpc.h  knet_hash_table.h
src/knet/core/hash/src/: knet_hash_rpc.c  knet_hash_table.c
src/knet/core/init/: CMakeLists.txt  init.spec
src/knet/core/init/include/: init.h
src/knet/core/init/src/: init.c  init_stack.c  init_stack.h
src/knet/core/io_init/: CMakeLists.txt  io_init.spec
src/knet/core/io_init/include/: knet_dpdk_cfg.h  knet_io_init.h  knet_pdump.h
src/knet/core/io_init/src/: knet_io_init.c  knet_pdump.c
src/knet/core/log/: CMakeLists.txt  log.spec
src/knet/core/log/include/: knet_log.h
src/knet/core/log/src/: knet_log.c
src/knet/core/mbuf/: CMakeLists.txt  mbuf.spec
src/knet/core/mbuf/include/: knet_pkt.h  knet_pktpool.h
src/knet/core/mbuf/src/: knet_pkt.c  knet_pktpool.c
src/knet/core/mem/: mem.spec
src/knet/core/mem/include/: knet_mem.h
src/knet/core/mem/src/: knet_mem.c
src/knet/core/rand/: CMakeLists.txt
src/knet/core/rand/include/: knet_rand.h
src/knet/core/rand/src/: knet_rand.c
src/knet/core/rpc/: rpc.spec
src/knet/core/rpc/include/: knet_rpc.h
src/knet/core/rpc/src/: knet_rpc.c
src/knet/core/symbols/: CMakeLists.txt  symbols.spec
src/knet/core/symbols/include/: knet_symbols.h
src/knet/core/symbols/src/: knet_symbols.c
src/knet/core/telemetry/: CMakeLists.txt  telemetry.spec
src/knet/core/telemetry/include/: knet_dpdk_telemetry.h
src/knet/core/telemetry/src/: knet_dpdk_telemetry.c  knet_telemetry_debug.c
src/knet/core/thread/: thread.spec
src/knet/core/thread/include/: knet_thread.h
src/knet/core/thread/src/: knet_thread.c
src/knet/core/transmission/: CMakeLists.txt  transmission.spec
src/knet/core/tun/: CMakeLists.txt
src/knet/daemon/: knet_mp_daemon.c
src/knet/framework/: CMakeLists.txt
src/knet/framework/base/: CMakeLists.txt  base.spec
src/knet/framework/capability/: CMakeLists.txt  capability.spec
src/knet/framework/config/: CMakeLists.txt  config.spec
src/knet/framework/dp_hijack/: CMakeLists.txt  dp_hijack.spec
src/knet/framework/log/: log.spec
src/knet/framework/osapi/: CMakeLists.txt  osapi.spec
src/knet/framework/rand/: rand.spec
src/knet/framework/rpc/: CMakeLists.txt  rpc.spec
src/knet/framework/thread/: CMakeLists.txt  thread.spec
src/knet/framework/tun/: tun.spec
src/knet/hal/: CMakeLists.txt
src/knet/hal/DPDK/: CMakeLists.txt
src/knet/sal/: CMakeLists.txt
src/knet/sal/knet_init/: CMakeLists.txt  knet_init.spec
src/knet/sal/sal_dp/: CMakeLists.txt  sal_dp.spec
src/knet/sal/tcp/: CMakeLists.txt
src/knet/signal/: CMakeLists.txt
src/knet/signal/signal_tcp/: CMakeLists.txt  signal_tcp.spec
src/stack/tcp/: CMakeLists.txt
src/stack/tcp/cmake/: depends_parse.py  knet.cmake
src/stack/tcp/src/: CMakeLists.txt
test/ut/: CMakeLists.txt  main.cpp
test/ut/common/: common.cpp  common.h
test/ut/mock/: knet_mock.c  knet_mock.h  mock.cpp  mock.h
test/ut/testcases/: knet_llt_atomic.cpp  knet_llt_base.cpp  knet_llt_bond.cpp  knet_llt_capability.cpp  knet_llt_comm_conf.cpp  knet_llt_config.cpp  knet_llt_config_core_queue.cpp  knet_llt_config_rpc.cpp  knet_llt_cothread.cpp  knet_llt_dpdk_telemetry.cpp  knet_llt_fmm.cpp  knet_llt_frame_fd.cpp  knet_llt_frame_hij.cpp  knet_llt_hash.cpp  knet_llt_hw_scan.cpp  knet_llt_init.cpp  knet_llt_io_init.cpp  knet_llt_lock.cpp  knet_llt_log.cpp  knet_llt_main.cpp  knet_llt_mem.cpp  knet_llt_pkt.cpp  knet_llt_pktpool.cpp  knet_llt_rand.cpp  knet_llt_rpc.cpp  knet_llt_sal_fun.cpp  knet_llt_sal_his.cpp  knet_llt_signal.cpp  knet_llt_statistics.cpp  knet_llt_stk_mp.cpp  knet_llt_telemetry_debug.cpp  knet_llt_telemetry_epoll.cpp  knet_llt_telemetry_persist.cpp  knet_llt_telemetry_usage.cpp  knet_llt_thread.cpp  knet_llt_transmission.cpp  knet_llt_tun.cpp  knet_llt_zcopy.cpp
(+798 files in other folders)
