add_subdirectory(base)
add_subdirectory(config)
add_subdirectory(capability)
add_subdirectory(rand)
add_subdirectory(thread)
add_subdirectory(log)
add_subdirectory(tun)
add_subdirectory(mem)
add_subdirectory(mbuf)
add_subdirectory(io_init)
add_subdirectory(transmission)
add_subdirectory(fmm)
add_subdirectory(hash)
add_subdirectory(init)
add_subdirectory(rpc)
add_subdirectory(telemetry)
add_subdirectory(symbols)
