add_subdirectory(dpdk_utils)
add_subdirectory(fmm)
add_subdirectory(hash)
add_subdirectory(bond)
add_subdirectory(dpdk_init)
add_subdirectory(mbuf)
add_subdirectory(mem)
add_subdirectory(offload)
add_subdirectory(pktdump)
add_subdirectory(telemetry)
add_subdirectory(transmission)
add_subdirectory(stk_mp)